--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xero/xerooauth-php",
+    "name": "neilrogers/xerooauth-php",
     "description": "PHP class for the Xero APIs",
     "type": "library",
     "keywords": ["xero","accounting","api","oauth"],
